--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Tenzies dice game created using create-react-app" />
-  <meta name="image" property='og:image' content='../src/tenzies-display.png' />
-  <meta property='og:description' content='Tenzies Dice Game' />
+  <!-- <meta name="description" content="Tenzies dice game created using create-react-app" /> -->
+  <meta property="og:image" content="../src/tenzies-display.png" />
+  <meta property="og:description" content="Tenzies Dice Game" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
