solving problem related to og:image

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <meta property="og:image" content="tenzies-display.png" />
+  <meta property="og:image"
+    content="https://res.cloudinary.com/dvpavvw1u/image/upload/v1648043320/tenzies-display_lhovlt.png" />
   <meta property="og:description" content="Tenzies Dice Game" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
