--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 
 <head>
-  <meta property="og:image"
+  <meta prefix="og: http://ogp.me/ns#" property="og:image"
     content="https://res.cloudinary.com/dvpavvw1u/image/upload/v1648043320/tenzies-display_lhovlt.png" />
-  <meta property="og:description" content="Tenzies Dice Game" />
+  <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Tenzies Dice Game" />
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
